@@ -357,6 +357,8 @@ Unreleased changes (1.0-dev)
 133. NUTCH-626 - Fetcher2 breaks out the domain with db.ignore.external.links
      set at cross domain redirects (Remco Verhoef, dogacan via siren)
 
+134. NUTCH-247 - Robot parser to restrict (kubes, siren)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
